button hover NWOLFDIGITAL button completed

--- a/index.html
+++ b/index.html
@@ -7,3 +7,12 @@
     <link rel="stylesheet" href="style.css">
     <title>button hover effect</title>
 </head>
+<body>
+    <a href="#">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        NWOLFDIGITAL
+    </a>
+    
