button hover NWOLFDIGITAL 2nd button completed

--- a/index.html
+++ b/index.html
@@ -15,4 +15,11 @@
         <span></span>
         NWOLFDIGITAL
     </a>
+    <a href="#">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        NWOLFDIGITAL
+    </a>
     
