button hover NWOLFDIGITAL 3rd button completed

--- a/index.html
+++ b/index.html
@@ -22,4 +22,12 @@
         <span></span>
         NWOLFDIGITAL
     </a>
-    
+    <a href="#">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        NWOLFDIGITAL
+    </a>
+</body>
+</html>
